# server/api/controllers/inventaire_action/controller.js
@@ -1,0 +1,25 @@
+import Inventaire_actionService from '../../services/inventaire_action.service';
+
+export class Controller {
+  all(req, res) {
+    Inventaire_actionService.all().then((r) => res.json(r.rows));
+  }
+
+  byId(req, res) {
+    Inventaire_actionService.byId(req.params.id).then((r) => {
+      if (r) res.json(r.rows);
+      else res.status(404).end();
+    });
+  }
+
+  create(req, res) {
+    Inventaire_actionService.create(
+      req.body.id,
+      req.body.lieu,
+      req.body.magasin
+    ).then((r) =>
+      res.status(201).location(`/api/v1/inventaire_action/${r.id}`).json(r.rowCount)
+    );
+  }
+}
+export default new Controller();
